--- a/harvard_sim/Cargo.toml
+++ b/harvard_sim/Cargo.toml
@@ -9,7 +9,10 @@ edition = "2021"
 anyhow = "1.0.79"
 clap = { version = "4.4.15", features = ["derive"] }
 env_logger = "0.10.1"
+itertools = "0.12.0"
 log = "0.4.20"
 nalgebra = "0.32.3"
 num-bigint = "0.4.4"
 num-traits = "0.2.17"
+strum = "0.25.0"
+strum_macros = "0.25.3"
