trying to get iqp circuit test to pass

--- a/harvard_sim/Cargo.toml
+++ b/harvard_sim/Cargo.toml
@@ -14,5 +14,7 @@ log = "0.4.20"
 nalgebra = "0.32.3"
 num-bigint = "0.4.4"
 num-traits = "0.2.17"
+rand = "0.8.5"
+sparse-bin-mat = "0.7.0"
 strum = "0.25.0"
 strum_macros = "0.25.3"
