--- a/harvard_sim/Cargo.toml
+++ b/harvard_sim/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
+bitvec = "1.0.1"
 clap = { version = "4.4.15", features = ["derive"] }
 env_logger = "0.10.1"
 indexmap = "2.1.0"
@@ -16,6 +17,5 @@ nalgebra = "0.32.3"
 num-bigint = "0.4.4"
 num-traits = "0.2.17"
 rand = "0.8.5"
-sparse-bin-mat = "0.7.0"
 strum = "0.25.0"
 strum_macros = "0.25.3"
