--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,10 @@
         "unordered_map": "cpp",
         "variant": "cpp",
         "algorithm": "cpp",
-        "future": "cpp"
+        "future": "cpp",
+        "any": "cpp",
+        "condition_variable": "cpp",
+        "map": "cpp",
+        "span": "cpp"
     }
 }
